@@ -4,7 +4,7 @@ Links: overview-links.h usage-links.h support-links.h
 <h3>TMDA Results</h3>
 
 Results thus far have been extremely favorable.  Before TMDA my
-mailbox was getting bombarded by 900+ pieces of junk mail per month as
+mailbox was getting bombarded by 1200+ pieces of junk mail per month as
 the result of my e-mail address being heavily publicized on USENET and
 various Internet mailing lists.  Now I almost never see a piece of
 SPAM (perhaps 1 every 4-6 weeks or so).  But don't just take my word for it..
@@ -37,6 +37,12 @@ Adam McKenna on the <em>qmail mailing list</em>
 "TMDA is the best thing since the invention of sliced bread. Scratch
 that - I could live without sliced bread..."<br>
 Robin S. Socha on the <em>tmda-users mailing list</em>
+<br><br>
+
+"Highly recommended.  My 30-a-day spam flood suddenly dried up
+completely.  A very elegant, comprehensive and sender-friendly
+solution."<br>
+Martin Dougiamas on <em>freshmeat.net</em>
 <br><br>
 
 "Just when I had decided I needed something like TMDA, I found it on
