@@ -1,3 +1,8 @@
+2002-02-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* results.ht (Links): Add freshmeat.net comment from Martin
+	Dougiamas to user testimonials, and updated monthly spam count.
+	
 2002-01-27  Jason R. Mastaler  <jason@mastaler.com>
 
 	* config-filter.ht: Merge in Tim Legant's documentation.
